<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name_file"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_name_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_content_file"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_content_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_save"
        android:text="@string/label_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_explorer"
        android:text="@string/label_button_explorer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/viewer_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/label_select_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_name_file_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_show_content"
        android:text="@string/label_button_show_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_file_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</LinearLayout>