<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tijanidian.add_playground.ut02.exercise02.Exercise02Activity">

    <Button
        android:id="@+id/action_repository_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_file" />

    <Button
        android:id="@+id/action_repository_mem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_mem" />

    <Button
        android:id="@+id/action_repository_shapref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sharpref" />

</LinearLayout>